# cool

./: .gitignore
doc/editable_files/: add_comment_seq.drawio  add_tag_seq.drawio  component.drawio  component_umlsec.drawio  delete_comment_seq.drawio  delete_seq.drawio  delete_tag_seq.drawio  download_seq.drawio  environment_of_system.drawio  get_seq.drawio  login_seq.drawio  register_seq.drawio  search_seq.drawio  upload_seq.drawio  usecase.drawio
doc/img/: Untitled Diagram.drawio
src/BackendIntegrationTests/: Cool Backend Integration Tests.postman_collection.json
src/Cool.API/: Cool.Api.csproj  Cool.sln  Program.cs  Startup.cs  appsettings.json
src/Cool.API/Authentication/: AuthenticationSchemes.cs  JwtBearerAuthenticationHandler.cs
src/Cool.API/Authorization/: CoolAuthorizationHandler.cs
src/Cool.API/Controllers/: AccountController.cs  CaffController.cs  TestController.cs
src/Cool.API/ExceptionHandling/: HttpResponseExceptionFilter.cs
src/Cool.API/Extensions/: HostEnvironmentExtensions.cs  OptionsExtensions.cs
src/Cool.BLL/: Cool.Bll.csproj
src/Cool.Common/: Cool.Common.csproj
src/Cool.DAL/: Cool.Dal.csproj  CoolDbContext.cs  Wireup.cs
src/Cool.Test/: CaffTests.cs  Cool.Test.csproj
src/Cool.Web/: README.md  angular.json  angularclient.nswag  jest.config.js  package-lock.json  package.json  sonar-project.properties  tsconfig.json  tsconfig.spec.json
src/NativeParser/: CMakeLists.txt  Caff.cpp  Caff.h  CaffBlock.cpp  CaffBlock.h  CaffBlockData.cpp  CaffBlockData.h  Ciff.cpp  Ciff.h  NativeParser.cpp  NativeParser.h  README.md
(+85 files in other folders)
